# cicd-inventory

./: .gitignore  README.md  the plan
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
extractor/: pyproject.toml
extractor/src/cicd_inventory/: __init__.py  cli.py  models.py  queries.py  writer.py
extractor/src/cicd_inventory/providers/: __init__.py  base.py  github.py
extractor/tests/: test_trigger_parsing.py
site/: astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
site/src/: content.config.ts
site/src/components/: Badge.astro  Breadcrumb.astro  FilterBar.astro  OrgSummary.astro  SearchFilter.astro  ThemeToggle.astro  WorkflowCard.astro
site/src/layouts/: BaseLayout.astro
site/src/lib/: constants.ts
site/src/pages/: index.astro
site/src/pages/[org]/: [repo].astro  index.astro
site/src/styles/: global.css
site/tests/: homepage.spec.ts  navigation.spec.ts  org-page.spec.ts  repo-page.spec.ts
site/tests/helpers/: axe.ts
