[project]
name = "cicd-inventory"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "pyyaml>=6.0,<7",
    "click>=8.1,<9",
]

[project.scripts]
cicd-inventory = "cicd_inventory.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cicd_inventory"]

[tool.ruff]
target-version = "py314"
line-length = 120
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["cicd_inventory"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
